// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-hYbzA-d ffuffT"
  >
    <div
      className="sc-VNrhD cPRkPu"
    >
      Title
    </div>
    <div
      className="sc-dMLzBS dvUGJi"
    />
  </div>
</div>
`;

exports[`Header renders with back button 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-hYbzA-d ffuffT"
  >
    <div
      className="sc-nnIRd kOcuPO"
    >
      <svg
        className="sc-iqcoie"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.996 16L6 16.004m0 0l5.383 5.385M6 16.004l5.383-5.386"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </div>
    <div
      className="sc-VNrhD cPRkPu"
    >
      Title
    </div>
    <div
      className="sc-dMLzBS dvUGJi"
    />
  </div>
</div>
`;

exports[`Header renders with close button 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-hYbzA-d ffuffT"
  >
    <div
      className="sc-VNrhD cPRkPu"
    >
      Title
    </div>
    <div
      className="sc-dMLzBS dvUGJi"
    >
      <div
        className="sc-hrtsrO kDooms"
      >
        <svg
          className="sc-lbxAil"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header renders with icons 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-hYbzA-d ffuffT"
  >
    <div
      className="sc-VNrhD cPRkPu"
    >
      Title
    </div>
    <div
      className="sc-dMLzBS dvUGJi"
    >
      <span
        className="sc-delRls dHWIOd"
      >
        <svg
          className="sc-iXxrte"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
            stroke="currentColor"
          />
        </svg>
      </span>
      <span
        className="sc-delRls dHWIOd"
      >
        <svg
          className="sc-elYLMi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Header renders with is divider 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-hYbzA-d fQbojW"
  >
    <div
      className="sc-VNrhD cPRkPu"
    >
      Title
    </div>
    <div
      className="sc-dMLzBS dvUGJi"
    />
  </div>
</div>
`;
